--- a/flights/templates/flights/base.html
+++ b/flights/templates/flights/base.html
@@ -1,15 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airline Booking System</title>
-</head>
-<body>
-    <h1>Airline Booking System</h1>
-    <div id="content">
-        {% block content %}
-        {% endblock %}
-    </div>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Airline Booking System</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+        
+    </head>
+    <body>
+        <div id="content">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </body>
 </html>
