--- a/flights/templates/flights/search_results.html
+++ b/flights/templates/flights/search_results.html
@@ -1,23 +1,40 @@
-{% load static %}
+{% extends 'flights/base.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Search Results</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
-</head>
-<body>
-    <div class="container">
-        <h1>Search Results</h1>
-        {% if flights %}
-            <ul>
-                {% for flight in flights %}
-                    <li>{{ flight.flight_number }} - {{ flight.origin }} to {{ flight.destination }}</li>
-                {% endfor %}
+
+<!-- MultiStep Form -->
+{% block content %}
+<div class="row">
+    <div class="col-md-8 col-md-offset-3">
+        <div id="msform">
+            <!-- progressbar -->
+            <ul id="progressbar">
+                <li >Flight Details</li>
+                <li class="active">Flight Results</li>
             </ul>
-        {% else %}
-            <p>No matching flights found.</p>
-        {% endif %}
+            <!-- fieldsets -->
+            <fieldset class="flight">
+                <h2 class="fs-title">Flight Results</h2>
+                {% comment %} <h1>Search Results</h1> {% endcomment %}
+                {% if flights %}
+                    <ul>
+                        {% for flight in flights %}
+                            <li >{{ flight.flight_number }} - {{ flight.origin }} to {{ flight.destination }}</li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No matching flights found.</p>
+                {% endif %}
+            </fieldset>
+        </div>
+        <!-- link to designify.me code snippets -->
+        
     </div>
-</body>
-</html>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+{% endblock %}
+
+
+<!-- /.MultiStep Form -->
