--- a/flights/templates/flights/flights.html
+++ b/flights/templates/flights/flights.html
@@ -9,12 +9,12 @@
             {% csrf_token %}
             <!-- progressbar -->
             <ul id="progressbar">
-                <li class="active">Flight Details</li>
+                <li class="active">Flight Search</li>
                 <li>Flight Results</li>
             </ul>
             <!-- fieldsets -->
             <fieldset>
-                <h2 class="fs-title">Flight Details</h2>
+                <h2 class="fs-title">Flight Search</h2>
                 <h3 class="fs-subtitle">Enter flight number, origin, or destination</h3>
                 <input type="text" name="search_query" placeholder="Enter flight number, origin, or destination"/>
                 {% comment %} <input type="text" name="lname" placeholder="Last Name"/>
