--- a/static_in_env/styles.css
+++ b/static_in_env/styles.css
@@ -9,13 +9,14 @@
 
 html {
     height: 100%;
-    background: #6441A5; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #6441A5, #2a0845); /* Chrome 10-25, Safari 5.1-6 */
+    background-image: url("./flight.jpg");
+    background-size: cover;
 }
 
 body {
     font-family: montserrat, arial, verdana;
     background: transparent;
+    /* background-image: url("./flight-bg.jpg"); */
 }
 
 /*form styles*/
